Bug: 50071 Address book > contact screen completely misaligned for long postal address or notes fields Added following two css properties rowValue class
max-width:800px;
word-wrap: break-word;

http://bugzilla.zimbra.com/show_bug.cgi?id=50071

Copied from Perforce
 Change: 328519

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -4735,6 +4735,8 @@ If you feel compelled to have a background color, please do so on a per skin lev
 }
 .ZmEditContactView .rowValue, .ZmContactSplitView .rowValue {
 	width:150px;
+	max-width:800px;
+	word-wrap: break-word;
 }
 .ZmEditContactView .rowValue, .ZmContactSplitView .rowValue[colspan] {
 	width:auto;
